# AstraDB

./: .clangd  .env  .env.example  .gitignore  AstraDB_DESIGN.md  CMakeLists.txt  CMakePresets.json  LICENSE  PERFORMANCE.md  README.md  analyze_headers.py  ascii.txt  astradb-dev-example.toml  astradb-node1.toml  astradb-node2.toml  astradb-node3.toml  astradb.toml  astradb_logo.txt  benchmark_compare.sh  bpftrace.out  coroutine_test_output.txt  dump.rdb  gdb_attach.txt  gdb_debug.txt  gdb_run.txt  run_benchmark.sh  test_cluster_redirect.sh  test_registration.cpp  tmp_pr_description.md
examples/: CMakeLists.txt  simple_metadata_test.cpp  test_3node_metadata_sync.cpp  test_libgossip_logging.cpp  test_temp_id_metadata.cpp
examples/io_uring/: CMakeLists.txt  README.md  asio_io_uring_pool_server.cpp  asio_io_uring_pool_server_debug.cpp  asio_io_uring_reuseport_server.cpp  asio_io_uring_server  asio_io_uring_server.cpp  asio_io_uring_strand_server.cpp  buffer_size_test.cpp  hex_dump_test.cpp  raw_io_uring_server  raw_io_uring_server.cpp  raw_tcp_client.cpp  test_client  test_client.cpp  test_reuseport_simple.cpp
src/astra/: CMakeLists.txt  astra.hpp
src/astra/base/: CMakeLists.txt  concurrentqueue_wrapper.hpp  config.cpp  config.hpp  constexpr_map.hpp  logging.cpp  logging.hpp  macros.hpp  simd_utils.hpp  version.hpp.in
src/astra/cluster/: CMakeLists.txt  cluster_config.cpp  cluster_config.hpp  cluster_flatbuffers.hpp  cluster_manager.hpp  cluster_message.fbs  gossip_manager.hpp  shard_manager.hpp
src/astra/commands/: CMakeLists.txt  acl_commands.cpp  acl_commands.hpp  admin_commands.cpp  admin_commands.hpp  bitmap_commands.cpp  bitmap_commands.hpp  blocking_manager.cpp  blocking_manager.hpp  client_commands.cpp  client_commands.hpp  cluster_commands.cpp  cluster_commands.hpp  command_auto_register.cpp  command_auto_register.hpp  command_cache.fbs  command_cache_flatbuffers.hpp  command_handler.cpp  command_handler.hpp  command_registry_optimized.hpp  data_type_registry.cpp  data_type_registry.hpp  database.hpp  geospatial_commands.cpp  geospatial_commands.hpp  hash_commands.cpp  hash_commands.hpp  hyperloglog_commands.cpp  hyperloglog_commands.hpp  list_commands.cpp  list_commands.hpp  pubsub_commands.cpp  pubsub_commands.hpp  replication_commands.cpp  replication_commands.hpp  scan_manager.hpp  script_commands.cpp  script_commands.hpp  set_commands.cpp  set_commands.hpp  (+10 more)
src/astra/commands/astra/: astra_commands.cpp  astra_commands.hpp  json_commands.cpp  json_commands.hpp  vector_commands.cpp  vector_commands.hpp  vector_search_runtime.hpp
src/astra/commands/redis/: acl_commands.cpp  admin_commands.cpp  admin_commands.hpp  bitmap_commands.cpp  client_commands.cpp  client_commands.hpp  cluster_commands.cpp  geospatial_commands.cpp  geospatial_commands.hpp  hyperloglog_commands.cpp  hyperloglog_commands.hpp  list_commands.hpp  replication_commands.cpp  script_commands.cpp  set_commands.cpp  stream_commands.cpp  stream_commands.hpp  string_commands.cpp  transaction_commands.hpp  zset_commands.hpp
src/astra/container/: CMakeLists.txt  dash_map.hpp  linked_list.hpp  stream_data.hpp  vector_index_manager.hpp  vector_types.hpp
src/astra/container/zset/: bplustree.hpp  bplustree_internal.hpp  bplustree_zset.cpp  bplustree_zset.hpp  btree_zset.cpp  btree_zset.hpp
src/astra/core/: CMakeLists.txt  metrics.cpp  metrics.fbs  metrics.hpp  metrics_flatbuffers.hpp  metrics_http.cpp  server_stats.hpp
src/astra/core/async/: awaitable_ops.hpp  executor.hpp  future.hpp  new_io_context_pool.cpp  new_io_context_pool.hpp  thread_pool.cpp  thread_pool.hpp
src/astra/core/memory/: arena_allocator.hpp  buffer_pool.hpp  eviction_manager.hpp  eviction_monitor.hpp  eviction_policy.hpp  eviction_strategy_2q.hpp  memory_tracker.hpp  object_pool.hpp  object_size_estimator.hpp  string_pool.hpp
src/astra/engine/: CMakeLists.txt
src/astra/lua/: CMakeLists.txt
src/astra/network/: CMakeLists.txt  connection.cpp  connection.cpp.bak  connection.hpp  connection.hpp.bak
src/astra/persistence/: CMakeLists.txt  aof.fbs  aof_flatbuffers.hpp  aof_writer.hpp  data_serializer.hpp  leveldb_adapter.hpp  rdb.fbs  rdb_common.hpp  rdb_flatbuffers.hpp  rdb_reader.hpp  rdb_writer.hpp  rocksdb.fbs  rocksdb_adapter.cpp  rocksdb_adapter.hpp  rocksdb_serializer.hpp  snapshot_manager.hpp
src/astra/protocol/: CMakeLists.txt
src/astra/protocol/resp/: CMakeLists.txt  resp_builder.cpp  resp_builder.hpp  resp_parser.cpp  resp_parser.hpp  (+1 more)
src/astra/replication/: CMakeLists.txt  replication_manager.hpp
src/astra/security/: CMakeLists.txt  acl_manager.hpp
src/astra/server/: CMakeLists.txt  io_session.hpp  managers.hpp  server.cpp  server.cpp.bak  server.cpp.orig  server.hpp  server.hpp.bak  shard.cpp  shard.hpp  transaction_state.cpp  transaction_state.hpp  worker.cpp  worker.hpp  worker_scheduler.cpp  worker_scheduler.hpp
src/astra/storage/: key_metadata.hpp
tests/benchmark/: CMakeLists.txt  cluster_bench.cpp  executor_bench.cpp  main.cpp  memory_bench.cpp  multi_database_bench.cpp  persistence_bench.cpp  real_storage_bench.cpp  rocksdb_bench.cpp  simd_bench.cpp  storage_mode_bench.cpp  vector_bench.cpp  zset_bench.cpp  zset_btree_bench.cpp  zset_btree_vs_bplustree_bench.cpp
tests/unit/: CMakeLists.txt  main.cpp
tests/unit/cluster/: CMakeLists.txt  cluster_flatbuffers_test.cpp  shard_manager_test.cpp
tests/unit/commands/: CMakeLists.txt  command_test.cpp  hello_test.cpp  multi_database_test.cpp  script_test.cpp  stream_test.cpp  transaction_test.cpp  ttl_test.cpp
tests/unit/container/: CMakeLists.txt  dash_map_test.cpp  zset_test.cpp
tests/unit/core/: CMakeLists.txt  executor_test.cpp  future_test.cpp
tests/unit/memory/: CMakeLists.txt  arena_test.cpp  buffer_pool_test.cpp  eviction_manager_test.cpp  eviction_policy_test.cpp  memory_tracker_test.cpp  object_pool_test.cpp  object_size_estimator_test.cpp
tests/unit/persistence/: CMakeLists.txt  aof_flatbuffers_test.cpp  aof_test.cpp  leveldb_test.cpp  rdb_test.cpp  snapshot_test.cpp
tests/unit/protocol/: CMakeLists.txt  resp_test.cpp
(+74 files in other folders)
